[package]
name = "beats-by-sui"
version = "0.1.0"
edition = "2021"

[dependencies]
apodize = "1.0.0"
approx = "0.5.1"
byteorder = "1.5.0"
ringbuf = "0.4.0"
rustfft = { version = "6.2.0", features = ["wasm_simd"] }
symphonia = { version = "0.5.4", features = ["all"] }
wasm-bindgen = "0.2.92"
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib", "rlib"]
